# hcompress

./: .gitignore  CMakeLists.txt  hcompress.c  hcompress.h  linkedList.c  linkedList.h
src/: hcompress.c  hcompress.h  linked_list.c  linked_list.h
